corrected responsiveness in auth icons, added responsiveness to Dashboard, and ChatPage. Also made changes to the custom scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,18 +31,18 @@ body {
 .scroll-container {
     height: full;
     overflow-y: scroll;
-    padding: 4px;
+    padding: 8px;
 }
 
 .scroll-container::-webkit-scrollbar {
-    width: 10px;
+    width: 6px;
     background: #2c2b27;
-    border-radius: 10px;
+    border-radius: 6px;
 }
 
 .scroll-container::-webkit-scrollbar-thumb {
     background: silver;
-    border-radius: 10px;
+    border-radius: 6px;
 
 }
 
